Reset password feature

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -233,7 +233,7 @@ border-radius: 38px;
 .profile-img-preview{
   max-width: 100%;
   max-height: 100%;
-  border-radius: 110px;
+  border-radius: 100%;
 }
 .center-content{
   text-align: center;
